--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -27,12 +27,39 @@
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_marginStart="90dp"
             android:textColor="@color/headerColor"
             android:layout_centerVertical="true"
             android:text=" username "
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tpi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_alignEnd="@+id/username"
+            android:layout_alignRight="@+id/username"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="0dp"
+            android:text=" tpi "
+            android:textColor="@color/headerColor"
+            android:visibility="gone"
+            android:textSize="10sp" />
+        <TextView
+            android:id="@+id/sigla"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_alignLeft="@+id/username"
+            android:layout_marginTop="11dp"
+            android:text=" sigla "
+            android:visibility="gone"
+            android:textColor="@color/headerColor"
+            android:textSize="10sp" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
